gtk/sass/4.0/_3rd-party.scss
/* ... */
.brisk-menu {
  border-top: 1px solid $menu_highlight_color;

  .categories-list { // left-pane
    button.flat {
      padding-top: unset;
      padding-bottom: unset;
      border-radius: 0; // remove roundness
      -gtk-outline-radius: 0;
      font-weight: 500;
      transition-duration: 0.1s; // shorter duration
      // almost covers :hover pseudo-class
      &:checked {
        background-color: transparent;
        color: $selected_bg_color;
      }

      image { padding: rem(8px) 0; }
      // for finer base-lines
      label { padding-bottom: rem(0.7px); }
    }
  }

  // hide separator above session-buttons
  box.vertical > box.horizontal > box.vertical > separator.horizontal {
    min-height: 0;
    background-color: transparent;
  }

  .apps-list, // legacy
  list.content-view.view { // right-pane
    background-color: $base_color;

    row.activatable {
      padding: 0;
      background-image: none;
      transition-duration: 0s;

      > button.flat {
        padding-top: unset;
        padding-bottom: unset;
        border-radius: 0; // remove roundness
        -gtk-outline-radius: 0;
        font-weight: 400;
        transition-duration: 0s; // needs quicker response

        // set vertical padding with icon's padding
        > box.horizontal > image { padding: rem(5.3px) 0; }
      }
    }
  }
}

.mate-panel-applet-slider {
  background-color: transparent;

  frame { // draw actual widget
    border-width: 1px;
    border-style: solid;
    border-color: $menu_highlight_color transparent transparent;
    border-radius: 2px;
    background-color: $secondary_base_color;

    // unset borders
    *,
    > border { border: unset; }
  }
}


// /*****************
//  * Mate-Terminal *
//  *****************/

.mate-terminal {
  notebook > box > header.top { // show drop-shadows
    @extend %ssd_notebook_shadow;
  }
}


// /********
//  * Caja *
//  ********/

.caja {
  &-canvas-item { @extend .nautilus-canvas-item; }

  &-list-dim-label { @extend .nautilus-list-dim-label; }
}

.caja-desktop { // desktop icon-grid styling
  &.caja-canvas-item { @extend .nautilus-desktop.nautilus-canvas-item; }

  > widget.entry { // = EelEditableLabel.entry
    &, &:focus {
      transition: none;

      &:selected { // FIXME: selection node doesn't work?
        @extend %selected_items;
      }
    }
  }
}

.caja-navigation-window {
  // side-panel styling
  .caja-side-pane {
    scrolledwindow {
      @extend %sidebar_template;

      treeview.view {
        background-color: transparent;
        &:selected { @extend %selected_items; }
      }
    }

    notebook {
      border-top: 1px solid $borders_color;

      .frame { border: none; }
    }

    button.flat:last-child { // 'close' button on header
      min-width: $icon_size;
      min-height: $icon_size;
      padding: rem(10.7px);
      border-radius: 2px;
      -gtk-outline-radius: 2px;
    }
  }

  // main toolbar styling
  toolbar.primary-toolbar {
    border-bottom: 1px solid $borders_color;
    box-shadow: if($variant == 'light', $toolbar-shadow-light,
                                        $toolbar-shadow-dark);

    button { // uniform button sizes
      min-width: $icon_size * 1.5;
      min-height: $icon_size * 1.5;
      padding: rem(4px);
    }
  }

  // path-bar styling
  .caja-pathbar {
    button {
      &:first-child { // remove meaningless gaps
        &:dir(ltr) { margin-right: -2px; }
        &:dir(rtl) { margin-left: -2px; }
      }
      &:not(:first-child):not(:last-child) {
        margin: 0 -2px;
      }
      &:last-child {
        &:dir(ltr) { margin-left: -2px; }
        &:dir(rtl) { margin-right: -2px; }
      }

      &.toggle,
      &.image-button,
      &.text-button,
      &.slider-button { // enforce square buttons
        border-radius: 2px;
        -gtk-outline-radius: 2px;
      }

      &, &.slider-button { // use linked-array button styling
        @extend %button_array;
      }
    }
  }

  button.image-button.toggle { // most-left toggle button in path-bar pane
    @include button(flat-normal);
    border-radius: 2px;
    -gtk-outline-radius: 2px;
    &:hover { @include button(flat-hover); }
    &:active { @include button(flat-active); }
    &:disabled { @include button(flat-insensitive); }
    &:checked { // use underline-indicator
      @include button(flat-checked);
      border-radius: 0;
      -gtk-outline-radius: 0;
      background-image: none;
      background-color: transparent;
      box-shadow: inset 0 -2px $selected_bg_color;
    }
  }

  .caja-notebook { // remove lateral borders
    &, .frame {
      border-width: 1px 0 1px;
    }

    > box > header.top { // revive top-border when tabs are shown
      border-top: 1px solid $borders_color;
      background-color: $secondary_dark_color;
      box-shadow: if($variant == 'light', $inline-shadow-light,
                                          $inline-shadow-dark);
    }
  }

  statusbar {
    margin: 0 -10px; // hide weird lateral gaps
    padding: 0 rem(6.7px);
    background-color: $secondary_dark_color;
    box-shadow: if($variant == 'light', $inline-shadow-light,
                                        $inline-shadow-dark);
  }

  // workaround for invisible text in rename entry
  scrolledwindow widget > widget.entry {
    &, &:focus {
      transition: none;

      &:selected { // FIXME: selection node doesn't work?
        @extend %selected_items;
      }
    }
  }
}

#caja-extra-view-widget {
  border-bottom: 1px solid $borders_color;
  background-color: $bg_color; // needs overriding

  > box > box > label { font-weight: 700; }
}
/* ... */

